# brain-beaver

./: .gitignore  CLAUDE.md  Dockerfile-bwsdb  GettingStarted.md  README.md  References.md  requirements.txt  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: pylint.yml  test-backend.yml
Aspire.AppHost/: Aspire.AppHost.csproj  Program.cs
backend/: algebra.py  checkpoint.json  checkpoint.json.backup  db.py  file.py  llmroute.py  main.py  model.py  requirements.txt  searchweb.py  split.py  test.py  testhelper.py  text.py  view.py  weave.py
bb_src/: BrainBeaver.sln
bb_src/Aspire.AppHost/: Program.cs
bb_src/Python.FastApi/: app.py.bak
docker/: Dockerfile-backup  Dockerfile-bwsdb  Dockerfile-bwsdbadmin  Dockerfile-bwsgrafana.bak  Dockerfile-bwsmq  Dockerfile-bwsvite  Dockerfile-bwsvite-prod  Dockerfile-dockeradmin  Dockerfile-pythonfastapi  Dockerfile-pythonfastapi-prod  README.md  build-prod.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.bak  docker-swarm-compose.yml  test-docker-setup.sh
docker/configs/initdb.d/: 03-repl-user-grant.sql
docker/configs/mq.conf/: rabbitmq.conf
docker/configs/otel.conf/: otel-collector-config.yaml
docker/configs/py.conf/: requirements.txt
docker/fastapi.conf/: requirements.txt
docker/graf.conf/: defaults.ini  grafana-datasources.yml  tempo.yaml
docker/initdb.d/: 01-create-extension.sql  02-create-table.sql
docker/otel.conf/: otel-collector-config.yaml
docker/py.conf/: requirements.txt
docker/vite.conf/: package.json
docs/: CHANGE_LOGS-250811.md  folder-structure-asis.txt  openapi.json  product-requirements-document.md  project-structure-guide.md  radon-xenon-usage.md  reimplementation-plan.md  user-ui-asis.md
python/: app.py  requirements.txt  test.py  view.py  view.py.bak
python/common/: algebra.py  constants.py  db.py  file.py  model.py  searchweb.py  testhelper.py  threadpool.py
python/common/db/: db.py
python/core/: expand.py  split.py  weave.py
python/demo/: concepts.csv  demo.py  networks.csv  references.csv  requirements.txt
python/engage/llmroute/: llmrouter.py  ollamaclient.py  openaiclient.py  responseDTO.py
python/engage/networks/: networkshandler.py  networksservice.py
python/expand/references/: referenceshandler.py  referencesmodel.py  referencesrepository.py  referencesservice.py
python/llm/: llmroute.py
python/res/: config.properties  secret.sample.properties  websearch.json  websearch_critics.json
python/resources/: config.properties
src/Aspire.AppHost/: Aspire.AppHost.csproj  Program.cs
src/Node.NextTSUI/: index.html  package-lock.json  package.json  tsconfig.json  view.py
src/Node.ViteUI/: admin.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/Python.FastApi/: .env.example  .env.sample  .flake8  alembic.ini  app.py  config.dev.ini  config.ini  config.prod.ini  pyproject.toml  requirements.txt  view.py
src/Python.FastApi/api/routers/: folders.py  health.py  jobs.py
src/Python.FastApi/common/algebra/: algebra.py
src/Python.FastApi/common/db/: db.py
src/Python.FastApi/common/llmroute/: llmrouter.py  ollamaclient.py  openaiclient.py
src/Python.FastApi/common/models/: responseDTO.py  simpleDTO.py
src/Python.FastApi/common/standard/: responseDTO.py
src/Python.FastApi/common/system/: constants.py  otlp_tracing.py  threadpool.py
src/Python.FastApi/concepts/: conceptshandler.py  conceptsmodel.py  conceptsreposigory.py  conceptsservice.py  conceptsservice.py.bak
src/Python.FastApi/core/: config.py  database.py  llm_setup.py  logging.py  models.py
src/Python.FastApi/domain/: __init__.py
src/Python.FastApi/domain/documents/: repository.py
src/Python.FastApi/domain/jobs/: models.py
src/Python.FastApi/engage/llmroute/: baseclient.py  ollamaclient.py  openaiclient.py
src/Python.FastApi/engage/networks/: networkshandler.py  networksmodel.py  networksrepository.py
src/Python.FastApi/expand/references/: referenceshandler.py  referencesrepository.py
src/Python.FastApi/expand/websearch/: websearchhandler.py
src/Python.FastApi/extract/: extracthandler.py  extractservice.py
src/Python.FastApi/extract/concepts/: conceptshandler.py
src/Python.FastApi/llmroute/: baseclient.py
src/Python.FastApi/migrations/: env.py
src/Python.FastApi/migrations/versions/: 2025_01_11_1200_001_initial_schema.py
src/Python.FastApi/networks/: networkshandler.py  networksmodel.py  networksrepository.py  networksservice.py
src/Python.FastApi/pipeline/: __init__.py  file_scanner.py  orchestrator.py
src/Python.FastApi/pipeline/adapters/: llm_interface.py  ollama_provider.py  openai_provider.py
src/Python.FastApi/pipeline/steps/: chunking.py  normalize.py  summarize.py
src/Python.FastApi/properties/: secret.sample.properties
src/Python.FastApi/references/: referenceshandler.py  referencesmodel.py  referencesrepository.py  referencesservice.py
src/Python.FastApi/resources/: config.properties
src/Python.FastApi/schemas/: common.py  jobs.py
src/Python.FastApi/src/common/llmroute/: ollamaclient.py
src/Python.FastApi/src/common/system/: constants.py
src/Python.FastApi/src/concepts/: conceptshandler.py  conceptsservice.py
src/Python.FastApi/src/extract/: extracthandler.py  extractservice.py
src/Python.FastApi/src/llmroute/: openaiclient.py
src/Python.FastApi/src/websearch/: websearchhandler.py  websearchservice.py
src/Python.FastApi/tests/unit/: test_app_smoke.py
src/Python.Flask/: app.py
(+32 files in other folders)
