[project]
name = "python-fastapi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "altair==5.3.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "anywidget==0.9.14",
    "appnope==0.1.4",
    "argcomplete==3.5.3",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "asttokens==2.4.1",
    "attrs==23.2.0",
    "babel==2.17.0",
    "beautifulsoup4==4.12.3",
    "black==25.1.0",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "boltons==25.0.0",
    "bs4==0.0.2",
    "cachetools==5.3.3",
    "certifi==2024.7.4",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "comm==0.2.2",
    "cosmograph==0.0.47",
    "datamodel-code-generator==0.28.2",
    "debugpy==1.8.2",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "docker-pycreds==0.4.0",
    "dol==0.3.12",
    "executing==2.0.1",
    "face==24.0.0",
    "fastapi==0.115.8",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "finance-datareader==0.9.94",
    "flask==3.1.0",
    "fqdn==1.5.1",
    "fsspec==2024.12.0",
    "genson==1.3.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "glom==24.11.0",
    "googleapis-common-protos==1.66.0",
    "grpcio==1.70.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.28.1",
    "i2==0.1.46",
    "idna==3.7",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.5.2",
    "inflect==5.6.2",
    "ipykernel==6.29.4",
    "ipython==8.26.0",
    "ipywidgets==8.1.5",
    "isodate==0.6.1",
    "isoduration==20.11.0",
    "isort==6.0.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jiter==0.8.2",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.22.0",
    "jsonschema-specifications==2023.12.1",
    "ju==0.1.16",
    "jupyter-client==8.6.2",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "kipsum==1.0.0",
    "lxml==5.3.0",
    "markdown==3.6",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.2",
    "mypy-extensions==1.0.0",
    "narwhals==1.24.2",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "numpy==2.0.0",
    "ollama==0.4.7",
    "openai==1.61.0",
    "opentelemetry-api==1.30.0",
    "opentelemetry-exporter-otlp==1.30.0",
    "opentelemetry-exporter-otlp-proto-common==1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.30.0",
    "opentelemetry-exporter-otlp-proto-http==1.30.0",
    "opentelemetry-instrumentation==0.51b0",
    "opentelemetry-instrumentation-asgi==0.51b0",
    "opentelemetry-instrumentation-fastapi==0.51b0",
    "opentelemetry-instrumentation-flask==0.51b0",
    "opentelemetry-instrumentation-logging==0.51b0",
    "opentelemetry-instrumentation-wsgi==0.51b0",
    "opentelemetry-proto==1.30.0",
    "opentelemetry-sdk==1.30.0",
    "opentelemetry-semantic-conventions==0.51b0",
    "opentelemetry-util-http==0.51b0",
    "overrides==7.7.0",
    "packaging==24.1",
    "pandas==2.2.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pgvector==0.3.0",
    "pika==1.3.2",
    "pillow==10.4.0",
    "platformdirs==4.2.2",
    "plotly==6.0.0",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.47",
    "protobuf==5.27.2",
    "psutil==6.0.0",
    "psycopg2==2.9.9",
    "psygnal==0.12.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pyarrow==16.1.0",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.2.1",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "pyzmq==26.0.3",
    "rdflib==7.0.0",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-file==2.1.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.7.1",
    "rpds-py==0.18.1",
    "safetensors==0.5.2",
    "send2trash==1.8.3",
    "sentry-sdk==2.7.1",
    "setproctitle==1.3.3",
    "setuptools==70.2.0",
    "simplejson==3.19.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.31",
    "stack-data==0.6.3",
    "starlette==0.45.3",
    "streamlit==1.36.0",
    "streamlit-agraph==0.0.45",
    "tabled==0.1.20",
    "tenacity==8.4.2",
    "terminado==0.18.1",
    "tiktoken==0.8.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.0",
    "toml==0.10.2",
    "toolz==0.12.1",
    "tornado==6.4.1",
    "tqdm==4.66.4",
    "traitlets==5.14.3",
    "transformers==4.48.2",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "uri-template==1.3.0",
    "urllib3==2.2.2",
    "uvicorn==0.34.0",
    "wandb==0.17.4",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0",
    "werkzeug==3.1.3",
    "widgetsnbextension==4.0.13",
    "wrapt==1.17.2",
    "zipp==3.21.0",
]
